--- a/rps.css
+++ b/rps.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
+.body{
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -12,26 +12,48 @@ body{
     align-items: center;
     background-color: #f6f7fb;
 }
+
 .cont{
+    display: grid;
+    grid-template-rows: 1fr;
     padding: 2rem 5rem;
     background-color: #fff;
     border-radius: 14px;
     box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
+.start .user_res img{
+    transform-origin:left;
+    animation: userShake 0.7s ease infinite;
+}
+@keyframes userShake {
+    50%{
+        transform: rotate(-10deg);
+    }
+}
+.start .cpu_res img{
+    transform-origin:right;
+    animation: cpuShake 0.7s ease infinite;
+}
+@keyframes cpuShake {
+    50%{
+        transform: rotate(-10deg);
+    }
+}
+
 .zone-area{
-    height: 12rem;
+    height: 25vh;
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns:auto auto;
     column-gap: 8rem; 
-    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 
 }
 .user_res,.cpu_res{
-    height: auto;
-    width: 9rem;
+    height:20vh;
+    width: 9vw;
     background-color: rgb(255, 255, 255);
 }
 .zone-area img{
@@ -45,7 +67,6 @@ body{
 } 
 .res{
     text-align: center;
-
     font-size: 2.2rem;
     font-weight: 600;
     color: #7d2ae8;
@@ -66,4 +87,38 @@ body{
 }
 .active{
     opacity: 10;
+}
+.score{
+    display: grid;
+    
+    grid-template-columns: 1fr 0.1fr 1fr;
+    justify-items: stretch;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.dis{
+    display: flex;
+    justify-items: stretch;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+.dis p{
+    font-size: 2rem;
+    font-weight: 600;
+    color: #7d2ae8;
+}
+.bar{padding-bottom: 12px;
+    height: 100%;
+    width: 4px;
+    font-size: 6vh;
+    font-weight: 400;
+    color: #7d2ae8;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+}
+.dis img{
+    height: auto;
+    width: 4vw;
 }
