--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -17,7 +17,7 @@ body{
     background: linear-gradient(135deg, #8052ec, #d161ff);
 }
 nav{
-    height: 12vh;
+    height: 8vh;
     width: 100vw;
     display: flex;
     background-color: blueviolet;
@@ -26,23 +26,119 @@ nav{
     font-weight: 600;
     align-items: center;
 }
+.start-popup{
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.message{
+    padding: 20px;
+    font-size: 4rem;
+    font-weight: 600;
+    
+}
+.new-game{
+    padding: 12px;
+    margin: 20px;
+    color: white;
+    font-size: 1em;
+    background-color: #0a0027;
+    border: none;
+    border-radius: 0.2em;
+}
+.hide{
+    display: none;
+}
 .cont{
     display: flex;
-    height: 88vh;
+    height: 90vh;
     width: 100vw;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    /* gap: 10px; */
 }
 .point-box{
-    width: 70vmin;
-    height: 40vmin;
+    position: relative;
+    width: 50vmin;
+    height: 19vmin;
     background-color: rgba(255, 255, 255, 0.166);
-    margin: 20px 20px;
+    margin: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    border-radius: 1em;
+    border: 0.2rem dashed rgb(77, 3, 127);
+    /* justify-content: space-evenly; */
+    margin: 10px 0px ;
 }
-
+ p{
+    font-size: 2rem;
+}
+.scroe-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+   
+}
+.user-box,.cpu-box{
+    height: 100%;
+    width: 50%;
+    font-size: 4rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+}
+.turn-opt{
+    width: 50vmin;
+    padding: 15px;
+    border-radius: 0.6em;
+    margin: 20px;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.318);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
+}
+.text{
+    z-index: 2;
+    font-size: 4vh;
+    color: #3b0052;
+    width: 100%;
+    text-align: center;
+}
+.slider-X{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    z-index: 1;  
+}
+.slider-O{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    z-index: 1;  
+}
 .gamebox{
     width: 50vmin;
     height:50vmin;
@@ -54,7 +150,7 @@ nav{
     row-gap: 10px;
     margin-bottom: 3vh;
     /* background-color: antiquewhite; */
-
+    
 }
 .game-opt-btn{
     background-color: white; 
@@ -62,18 +158,23 @@ nav{
     height: 16vmin;
     align-content: center;
     text-align: center;
-    font-size: 3rem;
-    font-weight: 800;
+    font-size: 4rem;
+    font-weight: 500;
     border: none;
     border-radius: 8px;
+    color: #d161ff;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 .reset-bnt{
+    position: absolute;
+    bottom: 0;
+    left: 0;
     display: inline-block;
     margin-bottom: 20px;
-    padding: 10px 70px;
+    padding: 10px 50px;
     font-size: 2.3rem;
     font-weight: 600;
-    border-radius: 30px;
+    border-radius: 10px;
     color: #090909;
     background-color: rgb(0, 255, 225);
 }
