--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -121,23 +121,19 @@ nav{
     width: 100%;
     text-align: center;
 }
-.slider-X{
+.slider{
     position: absolute;
     top: 0;
-    left: 0;
     width: 50%;
     height: 100%;
     background-color: white;
     z-index: 1;  
 }
-.slider-O{
-    position: absolute;
-    top: 0;
+.slider-X{
     left: 0;
-    width: 50%;
-    height: 100%;
-    background-color: white;
-    z-index: 1;  
+}
+.slider-O{
+    right: 0;
 }
 .gamebox{
     width: 50vmin;
