--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -29,7 +29,7 @@ nav{
 .start-popup{
     height: 100%;
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.377);
     position: absolute;
     top: 0;
     display: flex;
@@ -37,6 +37,7 @@ nav{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    z-index: 90;
 }
 .message{
     padding: 20px;
@@ -48,7 +49,7 @@ nav{
     padding: 12px;
     margin: 20px;
     color: white;
-    font-size: 1em;
+    font-size: 2em;
     background-color: #0a0027;
     border: none;
     border-radius: 0.2em;
@@ -81,7 +82,7 @@ nav{
     /* justify-content: space-evenly; */
     margin: 10px 0px ;
 }
- p{
+p{
     font-size: 2rem;
 }
 .scroe-box{
@@ -90,6 +91,25 @@ nav{
     justify-content: space-evenly;
     width: 100%;
    
+}
+.user-pic,.cpu-pic{
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    
+}
+.player{
+    width: 100%;
+    padding-bottom: 5px;
+    font-size: 1.5vw;
+    font-weight: 600;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
 }
 .user-box,.cpu-box{
     height: 100%;
@@ -113,6 +133,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     overflow: hidden;
+    /* background-color: rgb(114, 255, 114); */
 }
 .text{
     z-index: 2;
@@ -134,6 +155,13 @@ nav{
 }
 .slider-O{
     right: 0;
+}
+.winning-part{
+    font-size: 2.5rem;
+    color: rgb(0, 60, 0);
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
 }
 .gamebox{
     width: 50vmin;
