--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -14,7 +14,23 @@
 } */
 body{
     height: 100vh;
-    background: linear-gradient(135deg, #8052ec, #d161ff);
+    width: 100vw;
+    --s: 200px; /* control the size */
+
+  --_g: #dc9d37 25%, #fed450 0 50%, #0000 0;
+  --_l1: #fff 0 1px, #0000 0 calc(25% - 1px), #fff 0 25%;
+  --_l2: #fff 0 1px, #0000 0 calc(50% - 1px), #fff 0 50%;
+  background: repeating-linear-gradient(45deg, var(--_l1)),
+    repeating-linear-gradient(-45deg, var(--_l1)),
+    repeating-linear-gradient(0deg, var(--_l2)),
+    repeating-linear-gradient(90deg, var(--_l2)),
+    conic-gradient(from 135deg at 25% 75%, var(--_g)),
+    conic-gradient(from 225deg at 25% 25%, var(--_g)),
+    conic-gradient(from 45deg at 75% 75%, var(--_g)),
+    conic-gradient(from -45deg at 75% 25%, var(--_g)),
+    repeating-conic-gradient(#125c65 0 45deg, #bc4a33 0 90deg);
+  background-size: var(--s) var(--s);
+    /* background: linear-gradient(135deg, #8052ec, #d161ff); */
 }
 nav{
     height: 8vh;
@@ -29,7 +45,7 @@ nav{
 .start-popup{
     height: 100%;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.133);
+    background-color: rgba(255, 255, 255, 0.455);
     position: absolute;
     top: 0;
     display: flex;
@@ -71,7 +87,8 @@ nav{
     position: relative;
     width: 50vmin;
     height: 19vmin;
-    background-color: rgba(255, 255, 255, 0.166);
+    background-color: rgba(255, 255, 255, 0.073);
+    backdrop-filter: blur(3px);
     margin: 10px 20px;
     display: flex;
     flex-direction: column;
@@ -147,7 +164,8 @@ p{
     border-radius: 0.6em;
     margin: 20px;
     position: relative;
-    background-color: rgba(255, 255, 255, 0.318);
+    background-color: rgba(255, 255, 255, 0.159);
+    backdrop-filter: blur(3px);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -158,6 +176,7 @@ p{
 .text{
     z-index: 2;
     font-size: 4vh;
+    font-weight: 700;
     color: #3b0052;
     width: 100%;
     text-align: center;
@@ -229,6 +248,28 @@ p{
     color: #090909;
     background-color: rgb(0, 255, 225);
 }
+.button {
+    background-color: white;
+    color: black;
+    border-radius: 10em;
+    font-size: 17px;
+    font-weight: 600;
+    padding: 1em 2em;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: 1px solid black;
+    box-shadow: 0 0 0 0 black;
+  }
+  
+  .button:hover {
+    transform: translateY(-4px) translateX(-2px);
+    box-shadow: 2px 5px 0 0 black;
+  };
+  
+  .button:active {
+    transform: translateY(2px) translateX(1px);
+    box-shadow: 0 0 0 0 black;
+  };
 @media screen and (max-width: 580px){
     .point-box{
         width: 70vmin;
