--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -15,8 +15,7 @@
 body{
     height: 100vh;
     width: 100vw;
-    --s: 200px; /* control the size */
-
+    --s: 200px; 
   --_g: #dc9d37 25%, #fed450 0 50%, #0000 0;
   --_l1: #fff 0 1px, #0000 0 calc(25% - 1px), #fff 0 25%;
   --_l2: #fff 0 1px, #0000 0 calc(50% - 1px), #fff 0 50%;
@@ -29,7 +28,7 @@ body{
     conic-gradient(from 45deg at 75% 75%, var(--_g)),
     conic-gradient(from -45deg at 75% 25%, var(--_g)),
     repeating-conic-gradient(#125c65 0 45deg, #bc4a33 0 90deg);
-  background-size: var(--s) var(--s);
+    background-size: var(--s) var(--s);
     /* background: linear-gradient(135deg, #8052ec, #d161ff); */
 }
 nav{
