--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -4,14 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-/* .body{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f6f7fb;
-} */
+
 body{
     height: 100vh;
     width: 100vw;
@@ -40,6 +33,46 @@ nav{
     font-size: 3rem;
     font-weight: 600;
     align-items: center;
+}
+.choice{
+    height: 100%;
+    width: 100%;
+    font-size: 6vw;
+    font-weight: 600;
+    background-color: rgb(255, 45, 45);
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap:2rem;
+    z-index: 90;
+    display: none;
+}
+.user-choice{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap:3rem;
+}
+.team-choice{
+    height: 20vh;
+    width: 20vw;
+    background-color: rgb(221, 203, 0);
+    color: rgb(6, 6, 6);
+    border: 3px solid rgb(0, 0, 9);
+    border-radius: 20px;
+   
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .start-popup{
     height: 100%;
@@ -86,8 +119,8 @@ nav{
     position: relative;
     width: 50vmin;
     height: 19vmin;
-    background-color: rgba(255, 255, 255, 0.073);
-    backdrop-filter: blur(3px);
+    background-color: rgba(255, 255, 255, 0.333);
+    backdrop-filter: blur(5px);
     margin: 10px 20px;
     display: flex;
     flex-direction: column;
@@ -176,7 +209,7 @@ p{
     z-index: 2;
     font-size: 4vh;
     font-weight: 700;
-    color: #3b0052;
+    color: #000000;
     width: 100%;
     text-align: center;
 }
@@ -193,6 +226,25 @@ p{
 }
 .slider-O{
     right: 0;
+}
+.gritting-slider{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(4, 245, 0);
+    color: rgb(0, 54, 0);
+    z-index: 2;
+    font-size: 2.3rem;
+    font-weight: 600;
+    text-align: center;
+}
+.hide-grit{
+    display: none;
+}
+.draw-grit{
+    background-color: white;
+    color: black;
 }
 .winning-part{
     font-size: 2.5rem;
@@ -222,14 +274,14 @@ p{
     
 }
 .game-opt-btn{
-    background-color: white; 
+    background-color: rgb(255 221 114); 
     width: 16vmin;
     height: 16vmin;
     align-content: center;
     text-align: center;
     font-size: 5rem;
     font-weight: 500;
-    border: none;
+    border: 1px solid black;
     border-radius: 8px;
     color: #d161ff;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
