--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -1,17 +1,18 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body{
-    height: 100vh;
-    width: 100vw;
-    --s: 200px; 
-  --_g: #dc9d37 25%, #fed450 0 50%, #0000 0;
-  --_l1: #fff 0 1px, #0000 0 calc(25% - 1px), #fff 0 25%;
-  --_l2: #fff 0 1px, #0000 0 calc(50% - 1px), #fff 0 50%;
+body {
+  height: 100vh;
+  width: 100vw;
+  --s: 200px;
+  --_g: #00000085 25%, #010101 0 50%, #0c0c0c0b 0;
+  --_l1: #ffffff00 0 1px, #0f0d0d00 0 calc(25% - 1px), #ffffff00 0 25%;
+  --_l2: #ffffff00 0 1px, #0000 0 calc(50% - 1px), #ffffff00 0 50%;
   background: repeating-linear-gradient(45deg, var(--_l1)),
     repeating-linear-gradient(-45deg, var(--_l1)),
     repeating-linear-gradient(0deg, var(--_l2)),
@@ -20,359 +21,454 @@ body{
     conic-gradient(from 225deg at 25% 25%, var(--_g)),
     conic-gradient(from 45deg at 75% 75%, var(--_g)),
     conic-gradient(from -45deg at 75% 25%, var(--_g)),
-    repeating-conic-gradient(#125c65 0 45deg, #bc4a33 0 90deg);
-    background-size: var(--s) var(--s);
-    /* background: linear-gradient(135deg, #8052ec, #d161ff); */
+    repeating-conic-gradient(#1c1c1c 0 45deg, #060606f3 0 90deg);
+  background-size: var(--s) var(--s);
+  /* background: linear-gradient(135deg, #8052ec, #d161ff); */
 }
-nav{
+/* nav{
     height: 8vh;
     width: 100vw;
     display: flex;
-    background-color: blueviolet;
+    background-color: rgb(16, 16, 16);
     color: white;
     font-size: 3rem;
     font-weight: 600;
     align-items: center;
+} */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 240px;
+  background-color: #ffffff;
+  padding: 10px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
-.choice{
-    height: 100%;
+.sidebar img {
+  width: 40px;
+  border-radius: 6px;
+}
+.sidebar .logo-head {
+  padding-bottom: 16px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.logo-head .text-head{
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1.4rem;
+}
+.serach-box{
+    height: 50px;
     width: 100%;
-    font-size: 6vw;
-    font-weight: 600;
-    background-color: rgb(255, 45, 45);
-    position: absolute;
-    top: 0;
+    margin-top: 15px;
+    list-style: none;
+    background-color: rgba(77, 95, 255, 0.104);
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    gap:2rem;
-    z-index: 90;
-    display: none;
-}
-.user-choice{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap:3rem;
-}
-.team-choice{
-    height: 20vh;
-    width: 20vw;
-    background-color: rgb(221, 203, 0);
-    color: rgb(6, 6, 6);
-    border: 3px solid rgb(0, 0, 9);
-    border-radius: 20px;
-   
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-.start-popup{
-    height: 100%;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.455);
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    z-index: 90;
-}
-.message{
-    padding: 20px;
-    font-size: 4rem;
-    font-weight: 600;
-    
-}
-.new-game{
-    padding: 12px;
-    margin: 20px;
-    color: white;
-    font-size: 2em;
-    background-color: #0a0027;
     border: none;
-    border-radius: 0.2em;
+    border-radius: 7px;
 }
-.hide{
-    display: none;
+.serach-box i{
+    padding:0 13px;
+    font-size: 1.75rem;
+    color: rgb(77, 95, 255);
 }
-.cont{
-    display: flex;
+.serach-box input{
     height: 100%;
-    width: 100vw;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    /* gap: 10px; */
-}
-.point-box{
-    position: relative;
-    width: 50vmin;
-    height: 19vmin;
-    background-color: rgba(255, 255, 255, 0.333);
-    backdrop-filter: blur(5px);
-    margin: 10px 20px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    border-radius: 1em;
-    border: 0.2rem dashed rgb(77, 3, 127);
-    /* justify-content: space-evenly; */
-    margin: 8px 0px ;
-}
-p{
-    font-size: 2rem;
-}
-.scroe-box{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     width: 100%;
-   
+    font-size: 1.1rem;
+    outline: none;
+    border: none;
+    background-color: rgba(77, 95, 255, 0.036);;
 }
-.user-pic,.cpu-pic{
-    position: relative;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    
-}
-.side{
-    width: 10px;
-    height: 100%;
-    /* position: relative; */
-}
-.vs{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 3vh;
-}
-.round{
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    transform: translate(-35px, -7px);
-    font-size: 1.4vw;
-    width: 8vw;
-}
-.player{
+.menu-link li{
+    height: 50px;
     width: 100%;
-    padding-bottom: 5px;
-    font-size: 1.5vw;
-    font-weight: 600;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
+    margin-top: 1.1rem;
+    list-style: none;
+    display: flex;
+    align-items: center;
 }
-.user-box,.cpu-box{
+.list-text{
     height: 100%;
-    width: 50%;
-    font-size: 4rem;
+    width: 100%;
+}
+.list-text a{
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    text-align: center;
+    /* background-color: rgba(77, 95, 255, 0.104); */
+    text-decoration: none;
+    border: none;
+    border-radius: 7px;
 }
-.turn-opt{
-    width: 50vmin;
-    padding: 15px;
-    border-radius: 0.6em;
-    margin: 20px;
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.159);
-    backdrop-filter: blur(3px);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    overflow: hidden;
-    /* background-color: rgb(114, 255, 114); */
+.list-text a i{
+    padding:0 10px;
+    font-size: 1.75rem;
 }
-.text{
-    z-index: 2;
-    font-size: 4vh;
-    font-weight: 700;
-    color: #000000;
-    width: 100%;
-    text-align: center;
+.list-text a p{
+    font-size: 1.2rem;
 }
-.slider{
-    position: absolute;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    background-color: white;
-    z-index: 1;  
+
+
+
+
+
+
+
+
+
+
+
+
+.choice {
+  height: 100%;
+  width: 100%;
+  font-size: 6vw;
+  font-weight: 600;
+  background-color: rgb(255, 45, 45);
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  z-index: 90;
+  display: none;
 }
-.slider-X{
-    left: 0;
+.user-choice {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
 }
-.slider-O{
-    right: 0;
+.team-choice {
+  height: 20vh;
+  width: 20vw;
+  background-color: rgb(221, 203, 0);
+  color: rgb(6, 6, 6);
+  border: 3px solid rgb(0, 0, 9);
+  border-radius: 20px;
+
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
-.gritting-slider{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(4, 245, 0);
-    color: rgb(0, 54, 0);
-    z-index: 2;
-    font-size: 2.3rem;
-    font-weight: 600;
-    text-align: center;
+.start-popup {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.252);
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  z-index: 90;
 }
-.hide-grit{
-    display: none;
+.message {
+  padding: 20px;
+  font-size: 4rem;
+  font-weight: 600;
 }
-.draw-grit{
-    background-color: white;
-    color: black;
+.new-game {
+  padding: 12px;
+  margin: 20px;
+  color: white;
+  font-size: 2em;
+  background-color: #0a0027;
+  border: none;
+  border-radius: 0.2em;
 }
-.winning-part{
-    font-size: 2.5rem;
-    color: rgb(0, 60, 0);
-    font-weight: 700;
-    width: 100%;
-    text-align: center;
+.hide {
+  display: none;
 }
-.align{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+.cont {
+  display: flex;
+  height: 100%;
+  width: 100vw;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  /* gap: 10px; */
 }
-.gamebox{
-    width: 50vmin;
-    height:50vmin;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 9px;
-    row-gap: 10px;
-    margin-bottom: 3vh;
-    /* background-color: antiquewhite; */
-    
+.point-box {
+  position: relative;
+  width: 50vmin;
+  height: 19vmin;
+  background-color: rgba(253, 253, 253, 0.133);
+  backdrop-filter: blur(10px);
+  margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  border-radius: 1em;
+  border: 0.2rem dashed rgb(95, 95, 95);
+  /* justify-content: space-evenly; */
+  margin: 8px 0px;
 }
-.game-opt-btn{
-    background-color: rgb(255 221 114); 
-    width: 16vmin;
-    height: 16vmin;
-    align-content: center;
-    text-align: center;
-    font-size: 5rem;
-    font-weight: 500;
-    border: 1px solid black;
-    border-radius: 8px;
-    color: #d161ff;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+.choice p {
+  font-size: 2rem;
 }
-.reset-bnt{
-    /* position: absolute;
+.scroe-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.user-pic,
+.cpu-pic {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.side {
+  width: 10px;
+  height: 100%;
+  /* position: relative; */
+}
+.vs {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3vh;
+}
+.round {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-35px, -7px);
+  font-size: 1.4vw;
+  width: 8vw;
+}
+.player {
+  width: 100%;
+  padding-bottom: 5px;
+  font-size: 1.5vw;
+  font-weight: 600;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+.user-box,
+.cpu-box {
+  height: 100%;
+  width: 50%;
+  font-size: 4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+.turn-opt {
+  width: 50vmin;
+  padding: 15px;
+  border-radius: 0.6em;
+  margin: 20px;
+  position: relative;
+  background-color: rgba(235, 235, 235, 0.618);
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  overflow: hidden;
+  /* background-color: rgb(114, 255, 114); */
+}
+.text {
+  z-index: 2;
+  font-size: 4vh;
+  font-weight: 700;
+  color: #000000;
+  width: 100%;
+  text-align: center;
+}
+.slider {
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  background-color: white;
+  z-index: 1;
+}
+.slider-X {
+  left: 0;
+}
+.slider-O {
+  right: 0;
+}
+.gritting-slider {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(4, 245, 0);
+  color: rgb(0, 54, 0);
+  z-index: 2;
+  font-size: 2.3rem;
+  font-weight: 600;
+  text-align: center;
+}
+.hide-grit {
+  display: none;
+}
+.draw-grit {
+  background-color: white;
+  color: black;
+}
+.winning-part {
+  font-size: 2.5rem;
+  color: rgb(0, 60, 0);
+  font-weight: 700;
+  width: 100%;
+  text-align: center;
+}
+.align {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.gamebox {
+  width: 50vmin;
+  height: 50vmin;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 9px;
+  row-gap: 10px;
+  margin-bottom: 3vh;
+  /* background-color: antiquewhite; */
+}
+.game-opt-btn {
+  background-color: rgba(31, 31, 31, 0.918);
+  width: 16vmin;
+  height: 16vmin;
+  align-content: center;
+  text-align: center;
+  font-size: 5rem;
+  font-weight: 500;
+  border: 1px solid rgb(57, 57, 57);
+  border-radius: 8px;
+  color: #d161ff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+.reset-bnt {
+  /* position: absolute;
     bottom: 0;
     left: 0%; */
-    display: inline-block;
-    /* margin-bottom: 20px; */
-    padding: 10px 50px;
-    font-size: 2.3rem;
-    font-weight: 600;
-    border-radius: 10px;
-    color: #090909;
-    background-color: rgb(0, 255, 225);
+  display: inline-block;
+  /* margin-bottom: 20px; */
+  padding: 10px 50px;
+  font-size: 2.3rem;
+  font-weight: 600;
+  border-radius: 10px;
+  color: #090909;
+  background-color: rgb(0, 255, 225);
 }
 .button {
-    background-color: white;
-    color: black;
-    border-radius: 10em;
-    font-size: 17px;
-    font-weight: 600;
-    padding: 1em 2em;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    border: 1px solid black;
-    box-shadow: 0 0 0 0 black;
-  }
-  
-  .button:hover {
-    transform: translateY(-4px) translateX(-2px);
-    box-shadow: 2px 5px 0 0 black;
-  };
-  
-  .button:active {
-    transform: translateY(2px) translateX(1px);
-    box-shadow: 0 0 0 0 black;
-  };
-@media screen and (max-width: 580px){
-    .point-box{
-        width: 70vmin;
-        height: 30vmin;
-        border-radius: 0.8em;
-    }
-    .player{
-        font-size: 4vw;
-    }
-    .turn-opt{
-        width: 69vmin;
-    }
-    .gamebox {
-        width: 68vmin;
-        height: 60vmin;
-    }
-    .game-opt-btn {
-        width: 20vmin;
-        height: 20vmin;
-        font-size: 4rem;
-    }
-
+  background-color: white;
+  color: black;
+  border-radius: 10em;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 1em 2em;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid black;
+  box-shadow: 0 0 0 0 black;
 }
 
-@media screen and (max-width: 440px){
-    .point-box{
-        width: 83vmin;
-        height: 36vmin;
-                
-    }
-    .gamebox {
-        width: 77vmin;
-        height: 76vmin;
-    }
-    .game-opt-btn {
-        width: 24vmin;
-        height: 23vmin;
-    }
-    .turn-opt{
-        width: 77vmin;
-    }
+.button:hover {
+  transform: translateY(-4px) translateX(-2px);
+  box-shadow: 2px 5px 0 0 rgb(197, 197, 197);
+}
+
+.button:active {
+  transform: translateY(2px) translateX(1px);
+  box-shadow: 0 0 0 0 black;
+}
+@media  screen and(max-wid:950px){
+    
+}
+@media screen and (max-width: 580px) {
+  .point-box {
+    width: 70vmin;
+    height: 30vmin;
+    border-radius: 0.8em;
+  }
+  .player {
+    font-size: 4vw;
+  }
+  .turn-opt {
+    width: 69vmin;
+  }
+  .gamebox {
+    width: 68vmin;
+    height: 60vmin;
+  }
+  .game-opt-btn {
+    width: 20vmin;
+    height: 20vmin;
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .point-box {
+    width: 83vmin;
+    height: 36vmin;
+  }
+  .gamebox {
+    width: 77vmin;
+    height: 76vmin;
+  }
+  .game-opt-btn {
+    width: 24vmin;
+    height: 23vmin;
+  }
+  .turn-opt {
+    width: 77vmin;
+  }
 }
 @media screen and (max-width: 360px) {
-    .game-opt-btn {
-        width: 25vmin;
-        height: 25vmin;
-    }
-    .gamebox {
-        width: 81vmin;
-        height: 81vmin;
-    }
-    .turn-opt {
-        width: 82vmin;
-    }
+  .game-opt-btn {
+    width: 25vmin;
+    height: 25vmin;
+  }
+  .gamebox {
+    width: 81vmin;
+    height: 81vmin;
+  }
+  .turn-opt {
+    width: 82vmin;
+  }
 }
