--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -298,3 +298,9 @@ box-shadow: 2px 5px 0 0 rgb(255, 255, 255);
 transform: translateY(2px) translateX(1px);
 box-shadow: 0 0 0 0 rgb(255, 255, 255);
 }
+
+@media screen and (max-width:500px) {
+  .sidebar{
+    display: none;
+  }
+}
