Reset button is working

--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -309,7 +309,7 @@ a:active {
   font-weight: 900;
   line-height: 1.5;
   margin: 1rem;
-  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  mask-image: -webkit-radial-gradient(#000, #fff);
   padding: 0;
   text-transform: uppercase;
 }
