--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -1,15 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
+
+:root {
+  --title-color: #fff;
+  --text-color: hsl(235, 20%, 57%);
+  --shape-gradient: linear-gradient(90deg,
+                  hsl(300, 76%, 60%),
+                  hsl(57, 81%, 60%));
+  --body-gradient: linear-gradient(180deg,
+              hsl(22, 100%, 84%),
+              hsl(265, 100%, 80%));
+  --container-color: hsl(235, 32%, 10%);
+  --body-font: "Poppins", sans-serif;
+  --biggest-font-size: 2rem;
+  --normal-font-size: 1rem;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 
 body {
   height: 100vh;
   width: 100vw;
   background: linear-gradient(135deg, #8052ec, #d161ff);
+  font-family: "Poppins", sans-serif;
   /* background-image: url('https://t3.ftcdn.net/jpg/04/74/35/38/240_F_474353826_UZqTSzBryp6JumCEwofWwXtVBlqc8YXM.jpg'); */
 }
 .sidebar {
@@ -283,6 +299,131 @@ a:active {
   z-index: 99;
   flex-direction: column;
   flex-wrap: nowrap;
+  display: grid;
+  place-items: center;
+}
+.popUpMss img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card__container {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 367px;
+  align-items: center;
+  justify-items: center;
+}
+.card__article {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 1.2rem;
+  border-radius: 2rem;
+  text-align: center;
+  box-shadow: 0 20px 24px hsla(235, 32%, 15%, 0.2);
+  overflow: hidden;
+}
+.card__img {
+  width: 200px;
+  margin-bottom: 1rem;
+  animation: float-img 2.5s ease-in-out infinite;
+}
+.card__title {
+  color: var(--title-color);
+  font-size: var(--biggest-font-size);
+  line-height: 100%;
+  margin-bottom: 1rem;
+}
+.card__description {
+  font-size: var(--normal-font-size);
+  color: white;
+}
+.card__data {
+  position: relative;
+  z-index: 10;
+}
+.card__shapes {
+  display: grid;
+  justify-items: center;
+  row-gap: 2.5rem;
+  position: absolute;
+  inset: 0;
+  top: -3.5rem;
+  z-index: 1;
+}
+.card__shape {
+  display: block;
+  width: 260px;
+  height: 40px;
+  background: var(--shape-gradient);
+  border-radius: 4rem;
+  transform: rotate(-24deg);
+  opacity: 0;
+}
+.card__shape:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.card__shape:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.card__shape:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.card__shape:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.card__shape:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.card__shape:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.card__shape:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.card__shape:nth-child(8) {
+  animation-delay: 0.8s;
+}
+
+/* Animation img */
+@keyframes float-img {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-0.75rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+/* Animation shape */
+.card__article:hover .card__shape {
+    /* animation: shape-animate 0.8s 2 infinite; */
+  animation-name: shape-animate;
+  animation-duration: 0.8s ;
+  animation-iteration-count: 2; 
+}
+
+@keyframes shape-animate {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.1;
+  }
+  40% {
+    opacity: 0.3;
+  }
+  60% {
+    opacity: 0.7;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .btn-23,
@@ -305,7 +446,7 @@ a:active {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-size: 50%;
+  font-size: 35%;
   font-weight: 900;
   line-height: 1.5;
   margin: 1rem;
@@ -484,3 +625,16 @@ a:active {
     display: none;
   }
 }
+@media screen and (max-width: 440px) {
+  .card__container{
+      width: 240px;
+  }
+
+.card__img {
+  width: 160px;
+}
+.card__title {
+  font-size: 1.2rem;
+}
+}
+
