--- a/playsphere/src/component/tictactoe/game.css
+++ b/playsphere/src/component/tictactoe/game.css
@@ -2,6 +2,11 @@
     height: 96%;
     width: 26rem;
 }
+.gameBox{
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 47, 47);
+}
 @media screen and (max-width:400px){
     .contBox{
         height: 90%;
